Trying to fix safari overlap again

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 #game {
+  position: relative;
   height: 100dvh;
   margin: 0 auto;
   aspect-ratio: 4 / 3;
